# rinha-enferrujada-2025

./: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.migrations  copy.env  diesel.toml  docker-compose.yml  nginx.conf
migrations/2025-07-13-000811_create_payments/: down.sql  up.sql
src/: main.rs  schemas.rs
src/payments/: forms.rs  mod.rs  models.rs  routes.rs  services.rs  views.rs
