[package]
name = "rinha-enferrujada-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1"
pq-sys = { version = "0.6", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] }
dotenvy = "0.15"
thiserror = "2.0.11"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
env_logger = "0.11.6"
